data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1483.wast
;; 4. Create a function that performs a `loop` containing a call to another function that has an `unreachable` instruction. Test if the trap occurs consistently inside the loop.

(assert_invalid
  (module
    (func $callee (unreachable))
    (func (loop (call $callee)))
  )
 "unconditional trap"
)